Change Div Class to work with CSS

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <section class="container">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <div class="preview baku">
+      <div class="previewbaku">
         <h1>Baku</h1>
       </div>
-      <div class="preview london">
+      <div class="previewlondon">
         <h1>London</h1>
       </div>
-      <div class="preview madrid">
+      <div class="previewmadrid">
         <h1>Madrid</h1>
       </div>
-      <div class="preview rome">
+      <div class="previewrome">
         <h1>Rome</h1>
       </div>
     </section>
