--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <section class="container">
-      <h1>Modern luxury <span class="emphasis">travel</span></h1>
+      <div class="title">
+        <h1>Modern luxury <span class="emphasis">travel</span></h1>
+      </div>  
       <div class="previewbaku">
         <h1>Baku</h1>
       </div>
